# labscript-suite

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  README.txt  connectiontable_template.py  dependencies.txt  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py
.github/workflows/: gh-pages.yml  release-vars.sh  release.yml
art/source/: make_scaled_svgs.py
config/: example.ini
docs/: Makefile  contribute-docs.md  requirements.txt
docs/source/: archive.md  building_docs.rst  changes.md  community.rst  conf.py  configuration.rst  contribute-docs.md  contributing.md  features.md  index.rst  installation.md  labscript_users.bib  main.md  pyqt5-modified-objects.inv  troubleshooting.rst
docs/source/_static/: custom.css
docs/source/_templates/: components.rst
docs/source/building_docs/: docs_build.rst  docs_comitting.rst  docs_install.rst  docs_minutia.rst  docs_resources.rst  docs_writing.rst  index.rst
docs/source/configuration/: compiling_conn_table.rst  docs_comitting.rst  docs_install.rst  docs_minutia.rst  docs_writing.rst  labconfig.rst
docs/source/hardware/: index.rst  pineblaster.rst  prawnblaster.rst  prawndo.rst
docs/source/installation/: developer-anaconda.rst  developer-pypi.rst  development-pypi.rst  index.rst  regular-anaconda.rst  regular-pypi.rst  regular-to-developer.rst  regular-to-development.rst  setting-up-an-environment.rst
docs/source/project/: about.rst  conduct.rst  contributing.rst  contributing_guide.md  license.rst  structure.rst
docs/source/reference/: archive.md  changes.md  community.rst
docs/source/setup/: configuration.rst  troubleshooting.rst
labconfig/: example.ini
labscript_suite/: __version__.py
userlib/pythonlib/: README.txt
userlib/user_devices/: README.txt
