[metadata]
name = labscript-suite
description = Meta-package for the labscript suite experiment control and automation system
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/labscript-suite
    Download=https://github.com/labscript-suite/labscript-suite/releases
    Tracker=https://github.com/labscript-suite/labscript-suite/issues
keywords = experiment control automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  blacs
  labscript
  labscript-devices
  labscript-utils
  lyse
  runmanager
  runviewer
setup_requires =
  setuptools_scm

[options.extras_require]
pyqt = PyQt5
spincore = spinapi
nidaqmx = PyDAQmx
nivision = PyNIVision
docs = 
  Sphinx==3.0.1
  sphinx-rtd-theme==0.4.3
  recommonmark==0.6.0
  m2r==0.2.1

[dist_conda]
pythons = 3.6, 3.7, 3.8
