[metadata]
name = labscript-suite
description = Meta-package for the labscript suite experiment control and automation system
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/labscript-suite
    Download=https://github.com/labscript-suite/labscript-suite/releases
    Tracker=https://github.com/labscript-suite/labscript-suite/issues
keywords = experiment control automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  importlib_metadata
  setuptools_scm
  blacs>=3.1.0
  labscript>=3.1.0
  labscript-devices>=3.1.1
  labscript-utils>=3.2.0
  lyse>=3.1.0
  runmanager>=3.1.1
  runviewer>=3.1.2

[options.extras_require]
pyqt = PyQt5
spincore = spinapi
nidaqmx = PyDAQmx
nivision = PyNIVision
docs = 
  Sphinx==3.5.3
  sphinx-rtd-theme==0.5.2
  recommonmark==0.6.0
  m2r==0.2.1
  mistune<2.0.0
  jinja<3.1

